// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsebleSection Pure not default collapseSettings 1`] = `
<div
  className="default-CollapsebleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsebleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerText default-CollapsebleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsebleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsebleSection-headerArrow closed"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsebleSection-bodyHolder closed"
  >
    <div
      className="default-CollapsebleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure with headerSettings 1`] = `
<div
  className="default-CollapsebleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsebleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerText default-CollapsebleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsebleSection-titleClass"
      >
        title
      </span>
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            >
              firstColumnTerm
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            >
              secondColumnTerm
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsebleSection-headerText"
            >
              thirdColumnTerm
            </div>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsebleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsebleSection-bodyHolder default-CollapsebleSection-headerCursor"
  >
    <div
      className="default-CollapsebleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure without headerSettings 1`] = `
<div
  className="default-CollapsebleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsebleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerText default-CollapsebleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsebleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsebleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsebleSection-bodyHolder default-CollapsebleSection-headerCursor"
  >
    <div
      className="default-CollapsebleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure without headerSettings 2`] = `
<div
  className="default-CollapsebleSection-general"
>
  <withStyles(RowPure)
    className="default-CollapsebleSection-header"
    onClick={[Function]}
  >
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerText default-CollapsebleSection-headerHolder"
      lg={6}
      md={11}
    >
      <span
        className="default-CollapsebleSection-titleClass"
      />
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-CollapsebleSection-headerHolder"
      lg={6}
      md={1}
    >
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-termedSection"
        md="down"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={3}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className="default-CollapsebleSection-headerColumn"
            lg={6}
          >
            <div
              className="default-CollapsebleSection-headerText"
            />
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </withStyles(HiddenPure)>
      <withStyles(HiddenPure)
        className="default-CollapsebleSection-headerArrowHolder"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="default-CollapsebleSection-headerArrow"
          iconName="IconSortLeft"
        />
      </withStyles(HiddenPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-CollapsebleSection-bodyHolder default-CollapsebleSection-headerCursor"
  >
    <div
      className="default-CollapsebleSection-body"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;
